--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "publisher": "febean",
     "icon": "images/logo.png",
     "engines": {
-        "vscode": "^1.2.0"
+        "vscode": "^1.12.0"
     },
     "categories": [
         "Other"
@@ -49,7 +49,8 @@
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
         "tslint": "^5.8.0",
-        "vscode": "^1.1.6"
+        "vscode": "^1.1.6",
+        "typescript": "^2.9.2"
     },
     "dependencies": {
         "typescript": "^2.9.2"
